# adb-devices

./: .env.release.example  .gitignore  CHANGELOG.md  README.md  index.html  package-lock.json  package.json
.github/workflows/: build-packages.yml
docs/superpowers/plans/: 2026-05-20-adb-manager-image-cast.md  2026-05-20-adb-manager-ui-mantine-redesign.md
docs/superpowers/specs/: 2026-05-20-adb-manager-ui-mantine-redesign.md
graphify-out/: GRAPH_REPORT.md  cost.json  graph.json  manifest.json
scripts/: build-dmg.sh  install.command  prepare-scrcpy.sh  release-macos.sh  send-lark-release.mjs  set-version.sh
src/: App.tsx  i18n.ts  index.css  main.tsx  storage.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/locales/: en.yml  zh-CN.yml
src-tauri/src/: adb.rs  lib.rs  main.rs  state.rs
src-tauri/src/commands/: clipboard.rs  device.rs  image_cast.rs  install.rs  logcat.rs  mirror.rs  mod.rs  package.rs  record.rs  screenshot.rs  settings.rs  workbench.rs
src/components/: AdbSetup.tsx  AdbWorkbench.tsx  ApkInstall.tsx  Clipboard.tsx  DeviceList.tsx  ImageCast.tsx  Logcat.tsx  PackageList.tsx  PackageNameInput.tsx  PairConnect.tsx  ScreenMirror.tsx  ScreenRecord.tsx  Screenshot.tsx  Settings.tsx
src/components/common/: CommandOutput.tsx  PathSelector.tsx  ResultAlert.tsx
src/components/layout/: AppShellLayout.css  AppShellLayout.tsx  (+4 more)
src/hooks/: useAdb.ts  useDevices.ts
src/locales/: en-US.json  zh-CN.json
src/types/: index.ts
src/utils/: format.ts  packageSearch.ts
