[package]
name = "adb-manager"
version = "0.1.3"
description = "ADB Manager for Cozyla PMs"
authors = ["Cozyla"]
edition = "2021"

[lib]
name = "adb_manager_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-store = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
which = "7"
chrono = "0.4"
reqwest = { version = "0.12", features = ["json"] }
zip = "2"
tokio = { version = "1", features = ["full"] }
